# queuejitsu

./: .gitignore  Makefile  README.md  main.py  models.py  pyproject.toml  rules.yaml  settings.py
migrations/models/: 0_20250508233721_init.py  1_20250508233901_fixtures.py  2_20250509001017_update.py
